--- a/MSFLoader/MSFLoader.vcxproj
+++ b/MSFLoader/MSFLoader.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\lemur\Github\hexane-server\src\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Administrator\source\repos\hexane-server\src\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>MinSpace</Optimization>
       <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
@@ -135,7 +135,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Github\hexane-server\src\core\multitool.cpp" />
+    <ClCompile Include="..\..\hexane-server\src\core\multitool.cpp" />
+    <ClCompile Include="..\..\hexane-server\test\hash_test.cpp" />
     <ClCompile Include="loader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -145,7 +146,7 @@
     <ResourceCompile Include="MSFLoader.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\Downloads\meterpreter.dat" />
+    <None Include="..\meterpreter.bin" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
