--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .vs/MSFLoader
 MSFLoader/x64/Debug/MSFLoader.tlog
+hexane.exe
+hexane.exe.id0
+hexane.exe.id1
+hexane.exe.id2
+hexane.exe.nam
+hexane.exe.til
